--- a/.github/workflows/ci-cd-docker.yml
+++ b/.github/workflows/ci-cd-docker.yml
@@ -15,13 +15,13 @@ jobs:
 
       - name: Build da Imagem Docker
         run: |
-          docker build -t thiagoishida/allbooks:latest .
-          docker tag thiagoishida/allbooks:latest thiagoishida/allbooks:${{ github.sha }}
+          docker build -t thiagoishidalbs/allbooks:latest .
+          docker tag thiagoishidalbs/allbooks:latest thiagoishidalbs/allbooks:${{ github.sha }}
 
       - name: Login no Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USER }}" --password-stdin
 
       - name: Push da Imagem Docker
         run: |
-          docker push thiagoishida/allbooks:latest
-          docker push thiagoishida/allbooks:${{ github.sha }}
+          docker push thiagoishidalbs/allbooks:latest
+          docker push thiagoishidalbs/allbooks:${{ github.sha }}
